
* ``subunit-filter`` preserves the relative ordering of ``time:`` statements,
  so you can now use filtered streams to gather data about how long it takes
  to run a test. (Jonathan Lange, #716554)

* ``subunit-ls`` now handles a stream with time: instructions that start
  partway through the stream (which may lead to strange times) more gracefully.
  (Robert Collins, #785954)

* ``TestResultFilter`` now collapses sequential calls to time().
  (Jonathan Lange, #567150)

* ``TestResultDecorator.tags()`` now actually works, and is no longer a buggy
  copy/paste of ``TestResultDecorator.time()``. (Jonathan Lange, #681828)

* ``TestResultFilter`` now supports a ``fixup_expected_failures``
  argument. (Jelmer Vernooij, #755241)

* The ``subunit.run`` Python module supports ``-l`` and ``--load-list`` as
  per ``testtools.run``. This required a dependency bump due to a small
  API change in ``testtools``. (Robert Collins)

* The help for subunit-filter was confusing about the behaviour of ``-f`` /
  ``--no-failure``. (Robert Collins, #703392)

* The Python2.7 / testtools addUnexpectedSuccess API is now supported. This
  required adding a new status code to the protocol. (Robert Collins, #654474)

=======
CHANGES
~~~~~~~

* Newer testtools is needed as part of the Python 3 support. (Robert Collins)

0.0.6
-----

This release of subunit fixes a number of unicode related bugs. This depends on
testtools 0.9.4 and will not function without it. Thanks to Tres Seaver there
is also an optional native setup.py file for use with easy_install and the
like.

BUG FIXES
~~~~~~~~~

* Be consistent about delivering unicode content to testtools StringException
  class which has become (appropriately) conservative. (Robert Collins)

* Fix incorrect reference to subunit_test_failf in c/README.
  (Brad Hards, #524341)

* Fix incorrect ordering of tags method parameters in TestResultDecorator. This
  is purely cosmetic as the parameters are passed down with no interpretation.